--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,7 @@ JWT_REFRESH_TOKEN_EXPIRATION_TIME=30d
 SWAGGER_ENABLED=true
 SWAGGER_USER=admin
 SWAGGER_PASSWORD=admin
+
+EMAIL_CLIENT_ID=google-oauth2-client-id
+EMAIL_CLIENT_SECRET=google-oauth-client-secret
+EMAIL_DEFAULT_FROM=your.google.email@gmail.com
