--- a/package.json
+++ b/package.json
@@ -33,11 +33,15 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@types/nodemailer": "^6.4.14",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "express-basic-auth": "^1.2.1",
+    "googleapis": "^133.0.0",
+    "joi": "^17.12.2",
     "nest-winston": "^1.9.4",
+    "nodemailer": "^6.9.11",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
